--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Roulette Game</title>
-    <script src="cdn.tailwindcss.com"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="//cdn.tailwindcss.com"></script>
+    <script src="//code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         @keyframes spin {
             0% {
